# flowsheet

./: .gitignore  ATTRIBUTION.md  PURPOSE.md  README.md  code.py  main.py  pyproject.toml  requirements.txt  stk.py  structure
config/: settings.py
core/: __init__.py  app.py  terminal.py
doc/: pyproject.toml  structure.md
stk/: __init__.py  button.py  label.py  manu.py  win.py
tests/: debug_SDL.py  test_log.py  test_stk.py
utils/: __init__.py  event_decorators.py  keyboard_helper.py  log_write.py
